# passer

./: .gitignore  AGENT.md  AGENTS.md  ISSUES.md  PLAN.md  README.es.md  README.md  REVIEW_AND_PROPOSAL.md  TODO.md  TODO_NOTIFY.md  calibrate.html  chat.sh  check_name.py  check_names.py  check_paser.py  check_pssr.py  consejo_de_prueba.md  consejos.md  error.txt  error4.txt  error_resource.txt  install.sh  plan.md  pyproject.toml  pyrightconfig.json  repair_env.py  reproduce_bug.py  requirements.txt  test_config.py  test_config2.py  test_issue_60.py  test_part.py  test_part2.py  test_paser_agent.py  user_preferences.json  verify_ghost_browser.py  verify_tools.py  work_order.md  work_playwright.md
assets/: tools.txt
browser_profile_default/: Local State  SingletonCookie  SingletonLock  SingletonSocket
browser_profile_integrity_test_01/: Local State
browser_profile_persistence_test_02/: Local State
depracated/: list_models.py  lista_limites.json  mi_script.py  reinstall.sh
docs/: AGENT.md  PASER-mini.md  PASER_WHITE_PAPER.md  architecture.md  ghost_browser_setup.md  roadmap.md  technical_manual.md
paser/: main.py
paser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
passer/: main.py
scripts/: check_playwright.py  chunk1.txt  chunk2.txt  chunk3.txt  decode_and_write.py  run_all_tests.py  test_mouse.py  test_network_intercept.py  test_paser_integration.py  verify_aimouse.py  verify_tools.py
sessions/: last_session.json  maestria_sesion.json  test_session.json
staff/: cli_ux_designer.md  code_surgeon.md  doc_specialist.md  (+9 more)
(+333 files in other folders)
